[gd_scene load_steps=10 format=2]

[ext_resource path="res://Assets/Sprites/car.png" type="Texture" id=1]
[ext_resource path="res://Scripts/player.gd" type="Script" id=2]
[ext_resource path="res://Assets/Sfx/player_engine_2.wav" type="AudioStream" id=3]
[ext_resource path="res://Assets/Sfx/honk_2.wav" type="AudioStream" id=4]
[ext_resource path="res://Assets/Sprites/car_explode_1.png" type="Texture" id=5]
[ext_resource path="res://Assets/Sprites/car_explode_3.png" type="Texture" id=6]
[ext_resource path="res://Assets/Sprites/car_explode_2.png" type="Texture" id=7]
[ext_resource path="res://Assets/Sprites/car_explode_4.png" type="Texture" id=8]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ), ExtResource( 5 ), ExtResource( 7 ), ExtResource( 6 ), ExtResource( 8 ) ],
"loop": true,
"name": "explode",
"speed": 5.0
} ]

[node name="player" type="KinematicBody2D"]
script = ExtResource( 2 )
speed = 2048

[node name="car" type="Sprite" parent="."]
scale = Vector2( 2, 2 )
texture = ExtResource( 1 )

[node name="collision" type="CollisionPolygon2D" parent="."]
scale = Vector2( 2, 2 )
polygon = PoolVector2Array( 12, 8, 12, 16, 4, 16, 4, 8, -4, 8, -4, 16, -12, 16, -12, 8, -4, 7.5, -4, 0, -12, 0, -12, -8, -4, -8, -4, -16, 4, -16, 4, -8, 12, -8, 12, 0, 4, 0, 4, 7.5 )

[node name="engine_sfx" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -21.412

[node name="honk_sfx" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -21.412
pitch_scale = 0.83

[node name="car_explosion" type="AnimatedSprite" parent="."]
visible = false
scale = Vector2( 2, 2 )
frames = SubResource( 1 )
animation = "explode"
